syntax = "proto3";
package statusservice;


service StatusServiceRpc {
    rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
}

message PingResponse {
    
}
